[package]
name = "hyped"
version = "0.1.1"
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/swlkr/hyped"
repository = "https://github.com/swlkr/hyped"
keywords = ["html", "template", "ssr", "web"]
description = "An ergonomic way to render html using plain old rust"

[dependencies]
seq-macro = "0.3"
